Blockly: Fix style on iOS

--- a/blockly/app/assets/stylesheets/authentication.scss
+++ b/blockly/app/assets/stylesheets/authentication.scss
@@ -25,6 +25,8 @@
       }
 
       button {
+        padding: 0;
+        border: none;
         width: 50px;
         background-color: rgba(255, 255, 255, 0.1);
       }
